--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,5 +43,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: my-org/my-repo/my-image
+          repository: chaconmelgarejo/go-api-lab/go-api
           tag_with_ref: true
