--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@
 version: 2
 jobs:
   build:
+    environment:
+      IMAGE_NAME: chaconmelgarejo/go-api-lab
     docker:
       # specify the version
       - image: circleci/golang:1.9
@@ -24,3 +26,12 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: go get github.com/gorilla/mux
       - run: go test -v ./...
+      - run: 
+          name: Docker Auth
+          command: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+      - run:
+          name: Build Docker image
+          command: docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Push Docker image
+          command: docker push $IMAGE_NAME:latest
