--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,6 @@ jobs:
           command: |
             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
             docker push $IMAGE_NAME:latest
-    
 workflows:
   version: 2
   build-master:
@@ -61,6 +60,8 @@ workflows:
             branches:
               only: master
       - build:
+          requires:
+            - test
           filters:
             branches:
               only: master
