--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -21,5 +21,12 @@ spec:
     spec:
       containers:
         - name: go-svc
-          image: docker.io/cloudsultor/web-go-api
+          image: chaconmelgarejo/go-api-lab:latest
+          resources:
+            limits:
+              cpu: "100m"
+              memory: 256Mi
+            requests:
+              cpu: "50m"
+              memory: 128Mi
     
