--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+          docker_layer_caching: true
       - run:
           name: Build Docker image
           command: |
@@ -30,6 +31,7 @@ jobs:
       - run:
           name: Archive Docker image
           command: docker save -o image.tar $IMAGE_NAME
+      - save_cache:
       - persist_to_workspace:
           root: .
           paths:
@@ -43,6 +45,8 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - setup_remote_docker
+          docker_layer_caching: true
+      - restore_cache:
       - run:
           name: Load archived Docker image
           command: docker load -i /tmp/workspace/image.tar
