--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
   publish-latest:
     environment:
       IMAGE_NAME: chaconmelgarejo/go-api-lab
-      SHORT_GIT_HASH: $(echo "${CIRCLE_SHA1:0:7}")
+      SHORT_TAG: $(echo "${CIRCLE_SHA1:0:7}")
     docker:
       - image: circleci/buildpack-deps:stretch  
     steps:
@@ -54,8 +54,10 @@ jobs:
           name: Publish Docker Image to Docker Hub
           command: |
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-            docker push $IMAGE_NAME:$SHORT_GIT_HASH
             docker push $IMAGE_NAME:latest
+            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$SHORT_TAG
+            docker push $IMAGE_NAME:$SHORT_TAG
+            
 workflows:
   version: 2
   build-master:
