--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,3 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
   test:
@@ -55,8 +52,8 @@ jobs:
           command: |
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
             docker push $IMAGE_NAME:latest
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$SHORT_TAG
-            docker push $IMAGE_NAME:$SHORT_TAG
+            docker tag $IMAGE_NAME:latest $IMAGE_NAME:sc-$SHORT_TAG
+            docker push $IMAGE_NAME:sc-$SHORT_TAG
             
 workflows:
   version: 2
