--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Show new tag
-          command: echo "${CIRCLE_SHA1:0:7}" && echo "$IMAGE_SHORT_TAG"
+          command: echo "${CIRCLE_SHA1:0:7}"
       - run:
           name: Compute version number
           command: echo "0.0.${CIRCLE_BUILD_NUM}-${CIRCLE_SHA1:0:7}" | tee version.txt
@@ -54,7 +54,7 @@ jobs:
           command: |
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
             docker push $IMAGE_NAME:latest
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$(cat version.txt)
+            docker tag  $IMAGE_NAME:latest $IMAGE_NAME:$(cat version.txt)
             docker push $IMAGE_NAME:$(cat version.txt)
             
 workflows:
@@ -72,6 +72,7 @@ workflows:
             branches:
               only: main
       - publish-latest:
+          type: approval
           requires:
             - build
           filters:
